# django

./: .gitignore  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  renovate.json  requirements.txt  test.sh
{{ cookiecutter.name }}/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yml  conftest.py  docker-compose.db.yml  docker-compose.yml  mypy.ini  pyproject.toml
{{ cookiecutter.name }}/.github/actions/setup-project/: action.yml
{{ cookiecutter.name }}/.github/workflows/: ci.yml
{{ cookiecutter.name }}/src/: manage.py
{{ cookiecutter.name }}/src/.django-app-template/: admin.py-tpl
{{ cookiecutter.name }}/src/.django-app-template/admin/: __init__.py-tpl
{{ cookiecutter.name }}/src/.django-app-template/models/: __init__.py-tpl  app_name.py-tpl
{{ cookiecutter.name }}/src/a12n/: utils.py
{{ cookiecutter.name }}/src/a12n/api/: serializers.py  throttling.py  urls.py  views.py
{{ cookiecutter.name }}/src/app/: .env.ci  __init__.py  apps.py  base_config.py  celery.py  exceptions.py  factory.py  models.py  services.py  settings.py  wsgi.py
{{ cookiecutter.name }}/src/app/admin/: __init__.py
{{ cookiecutter.name }}/src/app/api/: pagination.py  parsers.py  renderers.py  request.py  throttling.py  viewsets.py
{{ cookiecutter.name }}/src/app/conf/: api.py  auth.py  boilerplate.py  celery.py  db.py  environ.py  http.py  i18n.py  installed_apps.py  media.py  middleware.py  sentry.py  static.py  storage.py
{{ cookiecutter.name }}/src/app/fixtures/: __init__.py  api.py  factory.py
{{ cookiecutter.name }}/src/app/middleware/: real_ip.py
{{ cookiecutter.name }}/src/app/testing/: __init__.py  api.py  factory.py  mixer.py  runner.py  types.py
{{ cookiecutter.name }}/src/app/tests/: test_health.py  test_remote_addr_midlleware.py
{{ cookiecutter.name }}/src/app/urls/: __init__.py  v1.py
{{ cookiecutter.name }}/src/core/: .env.ci
{{ cookiecutter.name }}/src/core/conf/: installed_apps.py  static.py  storage.py
{{ cookiecutter.name }}/src/core/testing/: __init__.py  api.py  factory.py
{{ cookiecutter.name }}/src/core/urls/: __init__.py
{{ cookiecutter.name }}/src/users/: admin.py  factory.py  fixtures.py  models.py
{{ cookiecutter.name }}/src/users/api/: urls.py  viewsets.py
{{ cookiecutter.name }}/src/users/tests/: test_password_hashing.py  test_whoami.py
{{ cookiecutter.name }}/tests/core/: factory.py
{{cookiecutter.project_slug}}/: .dockerignore  .editorconfig  .flake8  .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  dev-requirements.in  dev-requirements.txt  docker-compose.yml  mypy.ini  mypy.ini~  pyproject.toml  requirements.in  requirements.txt  update-deps.sh
{{cookiecutter.project_slug}}/.circleci/: config.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/src/: conftest.py  manage.py  mypy.ini  pytest.ini
{{cookiecutter.project_slug}}/src/.django-app-template/: admin.py-tpl  apps.py-tpl  factory.py-tpl  fixtures.py-tpl  models.py-tpl  urls.py-tpl
{{cookiecutter.project_slug}}/src/.django-app-template/api/: serializers.py-tpl  urls.py-tpl  views.py-tpl
{{cookiecutter.project_slug}}/src/.django-app-template/models/: app_name.py-tpl  models.py-tpl
{{cookiecutter.project_slug}}/src/a12n/: __init__.py  apps.py  urls.py
{{cookiecutter.project_slug}}/src/a12n/api/: serializers.py  throttling.py  views.py
{{cookiecutter.project_slug}}/src/app/: .env  .env.ci  asgi.py  base_config.py  config.py  factory.py  models.py  pagination.py  services.py  settings.py  urls.py  viewsets.py  wsgi.py
{{cookiecutter.project_slug}}/src/app/admin/: README.md  __init__.py  model_admin.py
{{cookiecutter.project_slug}}/src/app/api/: filterset_mixins.py  pagination.py  renderers.py  throttling.py  viewsets.py
{{cookiecutter.project_slug}}/src/app/conf/: api.py  auth.py  db.py  environ.py  healthchecks.py  http.py  i18n.py  installed_apps.py  media.py  middleware.py  sentry.py  static.py  storage.py  timezone.py
{{cookiecutter.project_slug}}/src/app/fixtures/: __init__.py  api.py  factory.py  image.py  media.py
{{cookiecutter.project_slug}}/src/app/middleware/: real_ip.py
{{cookiecutter.project_slug}}/src/app/test/: api_client.py
{{cookiecutter.project_slug}}/src/app/testing/: __init__.py  api.py  factory.py  mixer.py  runner.py  types.py
{{cookiecutter.project_slug}}/src/app/tests/: test_doc.py  test_health.py  test_on_transaction_commit.py  test_remote_addr_midlleware.py  tests_remote_addr_midlleware.py
{{cookiecutter.project_slug}}/src/app/urls/: __init__.py  v1.py
{{cookiecutter.project_slug}}/src/apps/a12n/: utils.py
{{cookiecutter.project_slug}}/src/apps/users/: admin.py
{{cookiecutter.project_slug}}/src/core/: .env.ci  settings.py  wsgi.py
{{cookiecutter.project_slug}}/src/core/admin/: __init__.py
{{cookiecutter.project_slug}}/src/core/api/: renderers.py  throttling.py
{{cookiecutter.project_slug}}/src/core/conf/: api.py~  auth.py  db.py  environ.py~  http.py  i18n.py  sentry.py  storage.py
{{cookiecutter.project_slug}}/src/core/testing/: __init__.py  api.py~  factory.py
{{cookiecutter.project_slug}}/src/core/urls/: v1.py  v1.py~
{{cookiecutter.project_slug}}/src/sepulkas/: admin.py  apps.py  factory.py  models.py  urls.py
{{cookiecutter.project_slug}}/src/sepulkas/api/: serializers.py  views.py  viewsets.py
{{cookiecutter.project_slug}}/src/sepulkas/migrations/: 0001_create_sepulka.py  0001_initial.py
{{cookiecutter.project_slug}}/src/sepulkas/tests/: conftest.py
{{cookiecutter.project_slug}}/src/users/: apps.py  factory.py  fixtures.py  models.py  urls.py
{{cookiecutter.project_slug}}/src/users/api/: serializers.py  views.py  viewsets.py
{{cookiecutter.project_slug}}/src/users/tests/: test_password_hashing.py  test_whoami.py  tests_whoami.py
{{cookiecutter.project_slug}}/tests/: conftest.py  conftest.py~
{{cookiecutter.project_slug}}/tests/apps/users/: conftest.py~  (+2 more)
{{cookiecutter.project_slug}}/tests/core/: factory.py  fixtures.py  fixtures.py~  test_remote_addr_midlleware.py  test_remote_addr_midlleware.py~
(+137 files in other folders)
